删除设置页面、修改我的副号、main

--- a/qiyexiaohao/center/about.html
+++ b/qiyexiaohao/center/about.html
@@ -11,7 +11,7 @@
 		<style>
 			.mui-btn-block{
 			    position: absolute;
-    			bottom: 0;    font-size: 15px;
+    			bottom: 0;    font-size: 0.93rem;color:#ff4400;
 			}
 			.mui-content {
     			background-color: #fff;
