--- a/qiyexiaohao/contactDetail.html
+++ b/qiyexiaohao/contactDetail.html
@@ -9,71 +9,7 @@
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
-		<style>
-			.mui-bar-nav.mui-bar .mui-icon {
-				margin-top: 1rem;
-			}
-			
-			.bottom_del_div {
-				position: fixed;
-				bottom: 0;
-				z-index: 9;
-				font-size: 1rem;
-				line-height: 100%;
-				padding: 0;
-				height: 1.88rem;
-			}
-			
-			.mui-grid-view.mui-grid-9 {
-				background-color: #fff;
-			}
-			
-			.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
-				font-size: 0.75rem
-			}
-			
-			.mui-grid-view.mui-grid-9 .mui-table-view-cell>a:not(.mui-btn) {
-				padding: 0;
-			}
-			
-			.detail_body {
-				background: #fff;
-				margin-bottom: 0.31rem;
-			}
-			
-			.detail_body_h {
-				padding: 14px 0 0;
-				line-height: initial;
-				margin: 0 50px 0 10px;
-			}
-			
-			.detail_body_b {
-				padding: 0 10px 5px;
-				line-height: initial;
-				margin: 0 50px 0 0;
-			}
-			
-			.span_right {
-				padding: 15px 15px;
-			}
-			
-			.ul_mr5 {
-				margin-top: 5px;
-			}
-			
-			.iconfont,
-			.mui-icon {
-				font-size: 1.12rem
-			}
-			
-			div {
-				line-height: initial;
-			}
-			
-			.mui-table-view-cell {
-				padding: 0.62rem 0.62rem 0.43rem 0.62rem;
-			}
-		</style>
+		<link rel="stylesheet" href="css/detail.css" />
 	</head>
 
 	<body>
@@ -120,14 +56,14 @@
 								<div class="mui-media-body">
 									<span class="color_red font_16">13510792830</span>
 									<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
-									<div class="font-size-12"></div><span class="mui-icon iconfont icon-huchujiantou color_red"></span>广东广州 4月9日 呼入</p>
+									<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou color_red"></span>广东广州 4月9日 呼入</div>
 								</div>
 							</li>
 							<li @tap="toTel()" class="mui-table-view-cell mui-media">
 								<div class="mui-media-body">
 									<span class="color_333 font_16">13510792830</span>
 									<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
-									<div class="font-size-12"></div><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</p>
+									<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</div>
 								</div>
 							</li>
 						</ul>
