--- a/qiyexiaohao/contacterDeHtml.html
+++ b/qiyexiaohao/contacterDeHtml.html
@@ -8,69 +8,7 @@
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
-		<style>
-			.mui-bar-nav.mui-bar .mui-icon{
-				margin-top: 1rem;
-			}
-			.bottom_del_div {
-				position: fixed;
-				bottom: 0;
-				z-index: 9;
-				font-size: 1rem;
-				line-height: 100%;
-				padding: 0;
-				height: 1.88rem;
-			}
-			.mui-grid-view.mui-grid-9 {
-				background-color: #fff;
-			}
-			
-			.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
-				font-size: 0.75rem
-			}
-			
-			.mui-grid-view.mui-grid-9 .mui-table-view-cell>a:not(.mui-btn) {
-				padding: 0;
-			}
-			
-			.detail_body {
-				background: #fff;
-				margin-bottom: 0.31rem;
-			}
-			
-			.detail_body_h {
-				padding: 14px 0 0;
-				line-height: initial;
-				margin: 0 50px 0 10px;
-			}
-			
-			.detail_body_b {
-				padding: 0 10px 5px;
-				line-height: initial;
-				margin: 0 50px 0 0;
-			}
-			
-			.span_right {
-				padding: 15px 15px;
-			}
-			
-			.ul_mr5 {
-				margin-top: 5px;
-			}
-			
-			.iconfont,
-			.mui-icon {
-				font-size: 1.12rem
-			}
-			
-			#listData div {
-				line-height: initial;
-			}
-			
-			#listData .mui-table-view-cell {
-				padding: 0.62rem 0.62rem 0.43rem 0.62rem;
-			}
-		</style>
+		<link rel="stylesheet" href="css/detail.css" />
 	</head>
 
 	<body>
