--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -58,70 +58,59 @@
 			}else if(width >= 640){
 				bottom = (28 * 3.75) +'px';
 			}
-			
-
 			var subpages = ['main.html', 'msg.html', 'contact_mint.html', 'my.html'];
 			var subpage_style = {
 				top: '0',
 				bottom: bottom
 			};
-
 			var aniShow = {};
 			var mainWeb = null;
 			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				//首页关闭ios右划
+				//首頁关闭ios右划
 				self.setStyle({
 					popGesture: "none"
 				});
-
-				for(var i = 0; i < 4; i++) {
-					var temp = {};
-					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if(i > 0) {
-						sub.hide();
-					} else {
-						temp[subpages[i]] = "true";
-						mui.extend(aniShow, temp);
-					}
-					self.append(sub);
-				}
+				var sub = plus.webview.create(subpages[0], subpages[0], subpage_style);
+				self.append(sub);
+				aniShow[subpages[0]] = true;
+				//当前激活选项
+				var activeTab = subpages[0];
 				mainWeb = plus.webview.getWebviewById('main.html');
+				//选项卡点击事件
+				_('.mui-bar-tab').on('tap', 'a', function(e) {
+					var targetTab = this.getAttribute('href');
+					if('main.html' == targetTab) {
+						mainWeb.evalJS('toggleShow()');
+					} else {
+						mainWeb.evalJS('toggleHidden()');
+					}
+					if(targetTab == activeTab) {
+						return;
+					}
+					//显示目标选项卡
+					//若为iOS平台或非首次显示，则直接显示
+					if(aniShow[targetTab]) {
+						plus.webview.show(targetTab);
+					} else {
+						//否则，创建页面并 使用fade-in动画，且保存变量
+						var temp = {};
+						temp[targetTab] = "true";
+						_.extend(aniShow, temp);
+						var sub = plus.webview.create(targetTab, targetTab, subpage_style);
+						self.append(sub);
+						sub.show(targetTab, "fade-in", 300);
+					}
+					//隐藏当前;
+					plus.webview.hide(activeTab);
+					//更改当前活跃的选项卡
+					activeTab = targetTab;
+				});
 				setTimeout(function() {
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
 			});
-			//当前激活选项
-			var activeTab = subpages[0];
-			//选项卡点击事件
-			mui('.mui-bar-tab').on('tap', 'a', function(e) {
-				var targetTab = this.getAttribute('href');
-				if('main.html' == targetTab) {
-					mainWeb.evalJS('toggleShow()');
-				} else {
-					mainWeb.evalJS('toggleHidden()');
-				}
-				if(targetTab == activeTab) {
-					return;
-				}
-				//显示目标选项卡
-				//若为iOS平台或非首次显示，则直接显示
-				if(mui.os.ios || aniShow[targetTab]) {
-					plus.webview.show(targetTab);
-				} else {
-					//否则，使用fade-in动画，且保存变量
-					var temp = {};
-					temp[targetTab] = "true";
-					mui.extend(aniShow, temp);
-					plus.webview.show(targetTab, "fade-in", 300);
-				}
-				//隐藏当前;
-				plus.webview.hide(activeTab);
-				//更改当前活跃的选项卡
-				activeTab = targetTab;
-			});
-
 			//自定义事件，模拟点击“首页选项卡”
 			document.addEventListener('goIndex', function() {
 				var defaultTab = document.getElementById("main");
