--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -10,6 +10,11 @@
 		<link rel="stylesheet" href="css/mui.min.css">
 		<link rel="stylesheet" href="css/iconfont.css" />
 		<link rel="stylesheet" href="css/common.css" />
+		<style>
+			.mui-bar-tab {
+				border-top: 1px solid #c8c7cc;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -28,7 +33,7 @@
 			</a>
 			<a id="my" class="mui-tab-item" href="my.html">
 				<span class="mui-icon iconfont icon-shouji"></span>
-				<span class="mui-tab-label">我的</span>
+				<span class="mui-tab-label">我的副号</span>
 			</a>
 		</nav>
 		<script src="js/mui.min.js"></script>
@@ -46,17 +51,17 @@
 			console.log("width=" + width);
 			//3.75
 			if(width >= 320 && width < 360){
-				bottom = "53px";
+				bottom = "54px";
 			}else if(width >= 360 && width < 400){
-				bottom = "60px";
+				bottom = "61px";
 			}else if(width >= 400 && width < 440){
-				bottom = "68px";
+				bottom = "69px";
 			}else if(width >= 440 && width < 480){
-				bottom = (20 * 3.75) +'px';
+				bottom = (20 * 3.75)+1 +'px';
 			}else if(width >= 480 && width < 640){
-				bottom = (22 * 3.75) +'px';
+				bottom = (22 * 3.75)+1 +'px';
 			}else if(width >= 640){
-				bottom = (28 * 3.75) +'px';
+				bottom = (28 * 3.75)+1 +'px';
 			}
 			var subpages = ['main.html', 'msg.html', 'contact_mint.html', 'my.html'];
 			var subpage_style = {
@@ -79,7 +84,7 @@
 				var activeTab = subpages[0];
 				mainWeb = plus.webview.getWebviewById('main.html');
 				//选项卡点击事件
-				_('.mui-bar-tab').on('tap', 'a', function(e) {
+				mui('.mui-bar-tab').on('tap', 'a', function(e) {
 					var targetTab = this.getAttribute('href');
 					if('main.html' == targetTab) {
 						mainWeb.evalJS('toggleShow()');
@@ -97,7 +102,7 @@
 						//否则，创建页面并 使用fade-in动画，且保存变量
 						var temp = {};
 						temp[targetTab] = "true";
-						_.extend(aniShow, temp);
+						mui.extend(aniShow, temp);
 						var sub = plus.webview.create(targetTab, targetTab, subpage_style);
 						self.append(sub);
 						sub.show(targetTab, "fade-in", 300);
@@ -110,6 +115,8 @@
 				setTimeout(function() {
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
+				//设备唯一标识符
+				window.setItem("identifier",plus.device.uuid);
 			});
 			//自定义事件，模拟点击“首页选项卡”
 			document.addEventListener('goIndex', function() {
