--- a/qiyexiaohao/main.html
+++ b/qiyexiaohao/main.html
@@ -437,18 +437,18 @@
 					var width = document.documentElement.clientWidth;
 					console.log("width=" + width);
 					//3.75
-					if(width >= 320 && width < 360) {
-						bottom = "53px";
-					} else if(width >= 360 && width < 400) {
-						bottom = "60px";
-					} else if(width >= 400 && width < 440) {
-						bottom = "68px";
-					} else if(width >= 440 && width < 480) {
-						bottom = (20 * 3.75) + 'px';
-					} else if(width >= 480 && width < 640) {
-						bottom = (22 * 3.75) + 'px';
-					} else if(width >= 640) {
-						bottom = (28 * 3.75) + 'px';
+					if(width >= 320 && width < 360){
+						bottom = "54px";
+					}else if(width >= 360 && width < 400){
+						bottom = "61px";
+					}else if(width >= 400 && width < 440){
+						bottom = "69px";
+					}else if(width >= 440 && width < 480){
+						bottom = (20 * 3.75)+1 +'px';
+					}else if(width >= 480 && width < 640){
+						bottom = (22 * 3.75)+1 +'px';
+					}else if(width >= 640){
+						bottom = (28 * 3.75)+1 +'px';
 					}
 				}
 			})
