--- a/qiyexiaohao/msg.html
+++ b/qiyexiaohao/msg.html
@@ -39,7 +39,7 @@
 						<mt-search v-model="searchValue" cancel-text="取消" placeholder="搜索"></mt-search>
 					</form>
 					<ul class="mui-table-view mui-table-view-striped mui-table-view-condensed">
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="toMsgList()">
 							<div class="mui-slider-right mui-disabled">
 								<a class="mui-btn mui-btn-red">删除</a>
 							</div>
@@ -56,7 +56,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="toMsgList()">
 							<div class="mui-slider-right mui-disabled">
 								<a class="mui-btn mui-btn-red">删除</a>
 							</div>
@@ -73,7 +73,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="toMsgList()">
 							<div class="mui-slider-right mui-disabled">
 								<a class="mui-btn mui-btn-red">删除</a>
 							</div>
@@ -89,7 +89,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="toMsgList()">
 							<div class="mui-slider-right mui-disabled">
 								<a class="mui-btn mui-btn-red">删除</a>
 							</div>
@@ -141,6 +141,9 @@
 					}
 				},
 				methods: {
+					toMsgList:function(){
+						w.openView("msgList.html")
+					},
 					sendMsg: function(toArr, msgBody) {
 						var msg = plus.messaging.createMessage(plus.messaging.TYPE_SMS);
 						msg.to = ['18611497504', '15811140520'];
@@ -198,20 +201,19 @@
 					_.init(), _(".mui-scroll-wrapper").scroll();
 					//获取屏幕宽度
 					var width = document.documentElement.clientWidth;
-					console.log("width=" + width);
 					//3.75
-					if(width >= 320 && width < 360) {
-						bottom = "53px";
-					} else if(width >= 360 && width < 400) {
-						bottom = "60px";
-					} else if(width >= 400 && width < 440) {
-						bottom = "68px";
-					} else if(width >= 440 && width < 480) {
-						bottom = (20 * 3.75) + 'px';
-					} else if(width >= 480 && width < 640) {
-						bottom = (22 * 3.75) + 'px';
-					} else if(width >= 640) {
-						bottom = (28 * 3.75) + 'px';
+					if(width >= 320 && width < 360){
+						bottom = "54px";
+					}else if(width >= 360 && width < 400){
+						bottom = "61px";
+					}else if(width >= 400 && width < 440){
+						bottom = "69px";
+					}else if(width >= 440 && width < 480){
+						bottom = (20 * 3.75)+1 +'px';
+					}else if(width >= 480 && width < 640){
+						bottom = (22 * 3.75)+1 +'px';
+					}else if(width >= 640){
+						bottom = (28 * 3.75)+1 +'px';
 					}
 				}
 			})
