--- a/qiyexiaohao/my.html
+++ b/qiyexiaohao/my.html
@@ -52,7 +52,7 @@
 							</a>
 						</li>
 					</ul>
-					<button type="button" class="mui-btn mui-btn-blue mui-btn-block">退出登录</button>
+					<button type="button" class="mui-btn mui-btn-blue mui-btn-block" @tap="openView('login.html')">退出登录</button>
 					<!--<ul class="mui-table-view">
 						<li class="mui-table-view-cell" @tap="openView('login.html')">
 							<div>15863498562</div>
