--- a/qiyexiaohao/center/about.html
+++ b/qiyexiaohao/center/about.html
@@ -58,7 +58,28 @@
 						plus.device.dial(self.phone,true);
 					},
 					checkVer:function(){//检查版本
-						
+						var nonce_str = u.mathRand();
+							console.log("nonce_str====" + nonce_str);
+							var timestamp = Date.parse(new Date()).toString().substr(0, 8);
+							console.log("timestamp====" + timestamp);
+							var identifier = w.getItem("identifier"); //设备标识号
+							var user_token = w.getItem("user_token"); //用户身份
+							var pdata = {
+								app: "Platform",
+								class: "getVersions",
+								nonce_str: nonce_str,
+								timestamp: timestamp,
+								identifier: identifier,
+								client: "web"
+							}
+							var stringSignTemp = "app=Platform&class=getVersions&client=web&identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&";
+							u.mypost(pdata, stringSignTemp, true, function(data) {
+								if(data.status == 0) {
+									_.toast(data.msg);
+								} else {
+									_.toast(data.msg || '请求异常');
+								}
+							}, myerror);
 					}
 				},
 				domReady: function() {
