--- a/qiyexiaohao/center/feedback.html
+++ b/qiyexiaohao/center/feedback.html
@@ -11,22 +11,79 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
-			<button id="submit" class="mui-btn mui-btn-link mui-pull-right">发送</button>
-			<h1 class="mui-title">意见反馈</h1>
-		</header>
-		<div class="mui-content">
-			<div class="mui-input-row" style="margin: 10px 10px">
-				<textarea style="border-radius:8px" id="content_6" rows="10" placeholder="感谢您的建议" maxlength="300"></textarea>
+		<div id="app">
+			<header class="mui-bar mui-bar-nav">
+				<a class="mui-action-back mui-icon iconfont icon-jiantou mui-pull-left"></a>
+				<button class="mui-btn mui-btn-link mui-pull-right" @tap="save()">发送</button>
+				<h1 class="mui-title">意见反馈</h1>
+			</header>
+			<div class="mui-content">
+				<div class="mui-input-row" style="margin: 10px 10px">
+					<textarea style="border-radius:8px" id="content_6" rows="10" placeholder="感谢您的建议" v-model="content" maxlength="300"></textarea>
+				</div>
 			</div>
 		</div>
 	</body>
 	<script src="../js/mui.min.js"></script>
+	<script type="text/javascript" src="../js/vue.min.js"></script>
+	<script type="text/javascript" src="../js/vue-tap.js"></script>
+	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
+	<script type="text/javascript" src="../js/js_des.js"></script>
+	<script type="text/javascript" src="../js/md5.js"></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
-			
+			var self = null;
+			App({
+				el: '#app',
+				data: {
+					content: '',
+				},
+				plusReady: {
+					init: function() {
+						self = this;
+					}
+				},
+				methods: {
+					save: function() {
+						if(u.isNull(self.content)) {
+							_.toast("请输入您的建议");
+						} else {
+							var nonce_str = u.mathRand();
+							console.log("nonce_str====" + nonce_str);
+							var timestamp = Date.parse(new Date()).toString().substr(0, 8);
+							console.log("timestamp====" + timestamp);
+							var identifier = w.getItem("identifier"); //设备标识号
+							var user_token = w.getItem("user_token"); //用户身份
+							var pdata = {
+								app: "Feedback",
+								class: "Save",
+								nonce_str: nonce_str,
+								timestamp: timestamp,
+								identifier: identifier,
+								client: "web",
+								user_token: user_token,
+								content: self.content
+							}
+							var stringSignTemp = "app=Feedback&class=Save&client=web&content=" + self.content + "identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&user_token=" + user_token + "&";
+							u.mypost(pdata, stringSignTemp, true, function(data) {
+								if(data.status == 0) {
+									_.toast("反馈成功");
+									_.later(function() {
+										_.back();
+									}, 1000)
+								} else {
+									_.toast(data.msg || '请求异常');
+								}
+							}, myerror);
+						}
+					}
+				},
+				domReady: function() {
+					_.init(), _(".mui-scroll-wrapper").scroll();
+				}
+			})
 		})(mui, window, util)
 	</script>
+
 </html>
