--- a/qiyexiaohao/center/kefu.html
+++ b/qiyexiaohao/center/kefu.html
@@ -49,6 +49,7 @@
 			}
 		</style>
 	</head>
+
 	<body>
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
@@ -64,13 +65,13 @@
 					</div>
 					<form id='login-form' class="mui-input-group font_15">
 						<div class="mui-input-row">
-							微信：yiqixiaohao
+							微信：{{wechat}}
 						</div>
 						<div class="mui-input-row">
-							微信公众号：企业小号
+							微信公众号：{{public_wechat}}
 						</div>
 						<div class="mui-input-row">
-							联系电话：1359656598
+							联系电话：{{service_hotline}}
 						</div>
 					</form>
 				</div>
@@ -80,19 +81,51 @@
 	<script src="../js/mui.min.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js"></script>
 	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
+	<script type="text/javascript" src="../js/js_des.js" ></script>
+	<script type="text/javascript" src="../js/_md5.js" ></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
 			App({
 				el: '#app',
-				data: {},
+				data: {
+					service_hotline:'',
+					wechat:'',
+					public_wechat:''
+				},
 				plusReady: {
 					init: function() {
 						self = this;
+						self.getPlatformInfo();
 					}
 				},
 				methods: {
-
+					getPlatformInfo: function() {
+						var nonce_str = u.mathRand();
+						console.log("nonce_str====" + nonce_str);
+						var timestamp = Date.parse(new Date())/1000;
+						console.log("timestamp====" + timestamp);
+						var identifier = w.getItem("identifier"); //设备标识号
+						var pdata = {
+							app: "Platform",
+							class: "getPlatformInfo",
+							nonce_str: nonce_str,
+							timestamp: timestamp,
+							identifier: identifier,
+							client: "web"
+						}
+						var stringSignTemp = "app=Platform&class=getPlatformInfo&client=web&identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&";
+						u.mypost(pdata, stringSignTemp, true, function(data) {
+							if(data.status == 0) {
+								data = data.data;
+								self.service_hotline = data.service_hotline;
+								self.wechat = data.wechat;
+								self.public_wechat = data.public_wechat;
+							} else {
+								_.toast(data.msg || '请求异常');
+							}
+						}, myerror);
+					}
 				},
 				domReady: function() {
 					_.init(), _(".mui-scroll-wrapper").scroll();
