--- a/qiyexiaohao/center/kefu.html
+++ b/qiyexiaohao/center/kefu.html
@@ -82,7 +82,7 @@
 	<script type="text/javascript" src="../js/vue.min.js"></script>
 	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
 	<script type="text/javascript" src="../js/js_des.js" ></script>
-	<script type="text/javascript" src="../js/_md5.js" ></script>
+	<script type="text/javascript" src="../js/md5.js" ></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
